Adicionado o serviço de processamento - consumo da fila de compra

--- a/passagem/src/main/resources/application.properties
+++ b/passagem/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.rabbitmq.username=maddytec
 spring.rabbitmq.password=maddytec
 
 spring.cloud.stream.bindings.input.destination=compra
-spring.cloud.stream.bindings.input.group=buyprocess
+spring.cloud.stream.bindings.input.group=passagem
 
 fila.saida=fila-compras-aguardando
 
