--- a/banco/src/main/resources/application-local.properties
+++ b/banco/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://db:3306/banco
+spring.datasource.url=jdbc:mysql://192.168.0.5:3306/banco
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
