Criação automatica de fila

--- a/passagem/src/main/resources/application.properties
+++ b/passagem/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.cloud.stream.bindings.input.destination=compra
 spring.cloud.stream.bindings.input.group=passagem
 
 fila.saida=fila-compras-aguardando
+fila.saida.exchange=fila-compras-aguardando-exchange
+fila.saida.dead.letter=fila-compras-aguardando-dead-letter
 
 
 #server.port=0
@@ -16,3 +18,5 @@ spring.application.name=comprar
 
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
+
+spring.jackson.default-property-inclusion=non_null
