Alteração do nome da fila

--- a/passagem/docker-compose.yml
+++ b/passagem/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
 
   rabbitmq:
-    image: rabbitmq:3-management
+    image: rabbitmq:3.6.6-management
     ports:
       - 8881:15672
       - 5671:5671
@@ -11,6 +11,8 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: maddytec
       RABBITMQ_DEFAULT_PASS: maddytec
+    volumes:
+      - rabbit_data:/var/lib/rabbitmq
 
   backend:
     build:
@@ -23,3 +25,5 @@ services:
       - 8086:8086
     environment:
     - SPRING_RABBITMQ_HOST=rabbitmq
+volumes:
+  rabbit_data:
