Ajuste na integração dos container

--- a/efetivacao/src/main/resources/application.properties
+++ b/efetivacao/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 server.port=8081
 
-spring.rabbitmq.username=maddytec
-spring.rabbitmq.password=maddytec
+spring.rabbitmq.host = 127.0.0.1
+spring.rabbitmq.username = maddytec
+spring.rabbitmq.password = maddytec
+spring.rabbitmq.port = 5672
 
 spring.cloud.stream.bindings.input.destination=compra
 spring.cloud.stream.bindings.input.group=efetivacao
 
 fila.entrada=fila-compras-aguardando
-fila.finalizado=fila-compras-finalizado
+fila.saida=fila-compras-finalizado
 
 banco.link=http://localhost:8090/pagamento
 
